# claude-server

./: .gitignore  README.md  SETUP.md  install_service.py  pyproject.toml
agent/: __main__.py  admin_ui.py  agent.toml.example  app_manager.py  app_manifest.py  app_store.py  config.py  jobs.py  repo_store.py  requirements.txt  runner.py  service.py  stats.py  telegram_bot.py  updater.py  watchdog.py
agent/handlers/: __init__.py  app_admin.py  files.py  git_ops.py  host.py  machine.py  ollama.py  ping.py  repo_admin.py  run_command.py  self_update.py  services.py  status.py  telegram_admin.py  watchdog_admin.py
install/: install-agent.ps1  run-agent.cmd  uninstall-agent.ps1  update-agent.ps1
mcp_plugin/: config.py  nats_client.py  requirements.txt  server.py
shared/: protocol.py  subjects.py
